# cpp-sandbox-basic

./: .gitignore  CMakeLists.txt  pi-estimator
include/: estimator.hpp
source/: estimator.cpp  main.cpp
